--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1 class="aboutmetitle">About Me</h1>
         <hr>
         <p id="aboutmepara">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis fuga consectetur laboriosam nesciunt ea sequi pariatur possimus voluptatibus beatae repellendus vel cumque dolorem cum qui modi, odit reiciendis eveniet quos?eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet </p>
-        <img id="image"src="lebron.jpg" alt="Italian Trulli">
+        <img id="image"src="lebron2.jpg" alt="Italian Trulli">
     </div>
 
     <div class="portfolio spaceclass">
