--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="aboutme spaceclass" id="aboutme">
         <h1 class="sectiontitle">About Me</h1>
         <hr>
-       <img id="image"src="./Assets/Images/new.jpg" alt="profilepicture">
+       <img id="image"src="Assets/Images/new.jpg" alt="profilepicture">
         <p id="aboutmepara">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis fuga consectetur laboriosam nesciunt ea sequi pariatur possimus voluptatibus beatae repellendus vel cumque dolorem cum qui modi, odit reiciendis eveniet quos?eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet eniet </p>
         
     </div>
