--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <div class="portfolio spaceclass" id="portfolio">
             <h1 class="sectiontitle">Portfolio</h1>
             <hr>
-            <a href="trivia.com"><img src="./Assets/Images/trivia.png" alt ="trivia"></a>
-            <a href="trivia.com"><img src="./Assets/Images/trivia.png" alt ="trivia"></a>
-            <div><a href="trivia.com"><img src="./Assets/Images/trivia.png" alt ="trivia"></a></div>
-            <div><a href="trivia.com"><img src="./Assets/Images/trivia.png" alt ="trivia"></a></div>
-            <div><a href="trivia.com"><img src="./Assets/Images/trivia.png" alt ="trivia"></a></div>
+            <a href="trivia.com"><img src="Assets/Images/trivia.png" alt ="trivia"></a>
+            <a href="trivia.com"><img src="Assets/Images/trivia.png" alt ="trivia"></a>
+            <div><a href="trivia.com"><img src="Assets/Images/trivia.png" alt ="trivia"></a></div>
+            <div><a href="trivia.com"><img src="Assets/Images/trivia.png" alt ="trivia"></a></div>
+            <div><a href="trivia.com"><img src="Assets/Images/trivia.png" alt ="trivia"></a></div>
         
     </div>
         
