--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Karanjyot Thandi</title>
     <link rel="stylesheet" type="text/css" href=".\Assets\css\reset.css"/>
     <link rel="stylesheet" type="text/css" href=".\Assets\css\style.css"/>
+    <link rel="icon" href="Assets/Images/new.jpg">
 </head>
 <body>
     
